--- a/covid-19 statics.html /login page.css
+++ b/covid-19 statics.html /login page.css
@@ -16,6 +16,7 @@ div {
 }
 div :hover {
   color: var(--mid);
+  transform: scale(1.2);
 }
 
 
@@ -41,6 +42,7 @@ h2{
 .poster{
   border-radius: 5%;
   border: 5px solid black;
+  box-shadow: 10px 10px 10px 0px #1b3763;
 margin: 10px 20px;
 }
 
@@ -127,3 +129,14 @@ button:hover{
   }
 }
 
+@keyframes borderChange {
+  0%   { border-color: #27374D; }
+  50%  { border-color: #DDE6ED; }
+  100% { border-color: #526D82; }
+}
+
+
+.poster {
+  animation: borderChange 3s infinite;
+
+}
