--- a/sime-finali-home-page/css/css-home-page.css
+++ b/sime-finali-home-page/css/css-home-page.css
@@ -84,6 +84,7 @@ h2 {
     left: 54%;
     box-sizing: border-box;
     box-shadow: 10px 10px 10px 0px #1b3763;
+    overflow:hidden;
 }
 
 .father div {
@@ -198,4 +199,5 @@ body {
   background-color: #9db4c0;
   transform: scale(1.1);
 }
+
 
